# akri

./: .dockerignore  Cargo.toml  version.sh
agent/: Cargo.toml  build.rs
agent/proto/: dra.proto
agent/src/: main.rs
agent/src/device_manager/: cdi.rs  file_based.rs  in_memory.rs  mod.rs
agent/src/discovery_handler_manager/: discovery_handler_registry.rs  discovery_property_solver.rs  mod.rs
agent/src/plugin_manager/: device_plugin_instance_controller.rs  dra_plugin.rs  mod.rs  v1alpha3.rs
agent/src/util/: discovery_configuration_controller.rs
deployment/helm/: values.yaml
deployment/helm/crds/: akri-discovery-config-crd.yaml  akri-instance-crd.yaml  akri-instance-filter-crd.yaml  akri-spore-crd.yaml
deployment/helm/templates/: NOTES.txt  agent.yaml  controller.yaml  driver-controller.yaml  prometheus.yaml  rbac.yaml  spore-controller.yaml  webhook-configuration.yaml
discovery-handlers/debug-echo/src/: discovery_handler.rs
driver-controller/: Cargo.toml
driver-controller/src/: claim_controller.rs  common.rs  main.rs  pod_scheduling_controller.rs
shared/: Cargo.toml
shared/src/: crdgen.rs  gen_crds.rs  lib.rs
shared/src/akri/: discovery_configuration.rs  instance.rs  instance_filter.rs  mod.rs  spore.rs
shared/src/k8s/: crud.rs  job.rs  mod.rs  pod.rs
spore-controller/: Cargo.toml
spore-controller/src/: main.rs
spore-controller/src/util/: controller.rs  instance_action.rs  mod.rs  node_watcher.rs  pod_watcher.rs  shared_test_utils.rs  template.rs  watcher_streamer.rs
test/e2e/: conftest.py  helpers.py
test/json/: config-a.json  local-instance-list.json  local-instance.json  shared-instance-list-slots.json  shared-instance-list.json  shared-instance-update.json  shared-instance.json  spore-a.json
webhooks/validating/configuration/: Cargo.toml
webhooks/validating/configuration/src/: main.rs
