[package]
name = "driver-controller"
version = "0.12.20"
license = "Apache-2.0"
authors = ["Akri Maintainers <cncf-akri-maintainers@lists.cncf.io>"]
edition = "2021"
rust-version = "1.73.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-shared = { path = "../shared" }
anyhow = "1.0.38"
async-std = "1.5.0"
chrono = "0.4.10"
env_logger = "0.10.0"
futures = "0.3.1"
k8s-openapi = { version = "0.21.1", default-features = false, features = ["schemars", "v1_29"] }
kube = { version = "0.88.1", features = ["derive"] }
kube-runtime = "0.88.1"
lazy_static = "1.4"
liquid-json = "0.6.0"
log = "0.4"
prometheus = { version = "0.12.0", features = ["process"] }
serde = "1.0"
serde_json = "1.0.45"
thiserror = "1.0.48"
tokio = { version = "1.0.2", features = ["full"] }
tokio-stream = "0.1.14"

[dev-dependencies]
mockall = "0.12"
