[package]
name = "akri-shared"
version = "0.12.20"
license = "Apache-2.0"
authors = ["<bfjelds@microsoft.com>"]
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.0"
either = '*'
futures = "0.3.1"
k8s-openapi = { version = "0.21.1", default-features = false, features = ["schemars", "v1_29"] }
kube = { version = "0.88.1",  features = ["derive"] }
kube-runtime = "0.88.1"
log = "0.4"
mockall = "0.12"
prometheus = { version = "0.12.0", features = ["process"] }
rand = "0.8.3"
schemars = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.0.1", features = ["full"] }
tonic = "0.10"
tower = "0.4.8"
warp = "0.3.6"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name="gen_crds"
path="src/gen_crds.rs"
